# Pyrite

./: .editorconfig  .gitattributes  .gitignore  App.axaml  App.axaml.cs  Cargo.toml  Program.cs  Pyrite.csproj  Pyrite.sln  README.md  ViewLocator.cs  app.manifest  config.toml.example  index.html  package.json  pnpm-lock.yaml
.github/workflows/: publish-artifacts.yml
Assets/: presentation workflow.drawio
Models/: ContestModels.cs  PyriteConfig.cs
Services/: ConfigLoader.cs  ContestProcessor.cs  EventFeedJsonContext.cs  EventFeedParser.cs
ViewModels/: LoadDataStageViewModel.cs  MainWindowViewModel.cs  PresentationStageViewModel.cs  SetMedalJsonContext.cs  SetMedalStageViewModel.cs  ViewModelBase.cs
Views/: LoadDataStageView.axaml  LoadDataStageView.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  PresentationStageView.axaml  PresentationStageView.axaml.cs  SetAwardStageView.axaml  SetAwardStageView.axaml.cs  SetMedalStageView.axaml  SetMedalStageView.axaml.cs
src/: main.css  main.rs  main.ts  models.rs  router.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  models.rs
src/screens/: load_data.rs  mod.rs  present.rs  set_award.rs
src/services/: config_loader.rs  contest_processor.rs  event_parser.rs  image_cache.rs  mod.rs  present_flow.rs
src/views/: HomeView.vue  ParseView.vue  ShowView.vue
