[package]
name = "pyrite"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4", features = ["serde"] }
eframe = "0.33"
rfd = "0.17.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-unwrap = "1.0.1"
image = "0.25"
